Scroll on overflow fixed.

--- a/src/static/css/custom.css
+++ b/src/static/css/custom.css
@@ -1,19 +1,35 @@
-html, body {
-	height: 100%;
-}
-
-body {
-	overflow: hidden;
-}
-
-@media (max-width: 1286px) {
-	body {
-		overflow: auto;
+@media (min-width: 1286px) {
+	html, body {
+		height: 100vh;
 	}
+
+	body {
+		overflow: hidden;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		width: 100vw;
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+#nav {
+
+}
+
+#content {
+	overflow-y: scroll;
+	scrollbar-color: yellow black;
 }
 
 .row {
 	--bs-gutter-x: 0;
+}
+
+.min-height-0 {
+	min-height: 0;
 }
 
 .ps-custom {
